...
  if (error) {
    return <Text> {error} </Text>;
  }

  return (
    <View style={styles.container}>
      <Text style={styles.title}>Liste des Bateaux</Text>

      <ScrollView>
        {ships.length === 0 ? (
          <Text style={styles.empty}>Aucun bateau pour le moment.</Text>
        ) : (
          ships.map((ship, i) => {
...
        <Button
          title={`Supprimer (${selectedIds.length})`}
          color="red"
          onPress={handleDelete}
        />
        {/* AJOUT DU TESTID ICI */}
        <View testID="addShipButton">
          <Button title="Ajouter ships" onPress={onAdd} />
        </View>
        <Button
          title="Changer de port ⚓️"
          color="purple"
          onPress={handleOpenSendModal}
...
